--- a/src/components/layouts/portfolio/About.module.css
+++ b/src/components/layouts/portfolio/About.module.css
@@ -6,14 +6,11 @@
 }
 
 .dream_item {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
     border: 1px solid #ddd;
     padding: 1rem 3rem;
-
+    flex: 0 0 31%;
+    margin-bottom: 1rem;
 }
-
 
 .dream_item h4 {
     text-transform: capitalize;
@@ -25,14 +22,16 @@
     line-height: 1rem;
     font-size: 1rem;
     font-weight: normal;
+    margin-bottom: 1rem;
 }
 
 .dream_item a {
     background: tomato;
-    padding: 0.5rem;
-    width: 40%;
-    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    font-size: 1.3rem;
     text-transform: capitalize;
     font-weight: 700;
     color: #fff;
 }
+
+.div {}
